# midas-journal-797

VTKClassesForBooleanOperationsOnSurfaces/Document/LaTeX/: Article.bib  Article.tex  ResultsFigure.tex
VTKClassesForBooleanOperationsOnSurfaces/Document/LaTeX/Figures/: Teaser.pvsm
VTKClassesForBooleanOperationsOnSurfaces/Source/: BooleanOperationPolyDataFilterExample.cxx  CMakeLists.txt  PipelineExample.cxx  vtkBooleanOperationPolyDataFilter.cxx  vtkBooleanOperationPolyDataFilter.h  vtkDistancePolyDataFilter.cxx  vtkDistancePolyDataFilter.h  vtkImplicitPolyData.cxx  vtkImplicitPolyData.h  vtkIntersectionPolyDataFilter.cxx  vtkIntersectionPolyDataFilter.h
